Spring Boot3 upgrade